Фильтрация отображения данных

--- a/Bookinist/appsettings.json
+++ b/Bookinist/appsettings.json
@@ -2,7 +2,7 @@
   "Database": {
     "Type": "MSSQL",
     "ConnectionStrings": {
-      "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Bookinist.db;Integrated Security=True;",
+      "MSSQL": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Bookinist.db;Integrated Security=True;MultipleActiveResultSets=True",
       "SQLite": "Data Source=Bookinist.db"
     }
   } 
